--- a/app/assets/stylesheets/components/_animation.scss
+++ b/app/assets/stylesheets/components/_animation.scss
@@ -1,125 +1,125 @@
 
 
-.animation-wrapper{
-	bottom: 0;
-	left: 0;
-	position: absolute;
-	right: 0;
-	top: 107.7rem;
-  height: 30%;
-}
+// .animation-wrapper{
+// 	bottom: 0;
+// 	left: 0;
+// 	position: absolute;
+// 	right: 0;
+// 	top: 107.7rem;
+//   height: 30%;
+// }
 
-.water{
-  bottom: 0;
-  left: 0;
-	position: absolute;
-  width: 100%;
-  height: 20%;
-}
+// .water{
+//   bottom: 0;
+//   left: 0;
+// 	position: absolute;
+//   width: 100%;
+//   height: 20%;
+// }
 
-.water ul.waves{
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
+// .water ul.waves{
+// 	list-style: none;
+// 	margin: 0;
+// 	padding: 0;
+// }
 
-.water ul.waves li{
-	background-repeat: repeat-x;
-}
+// .water ul.waves li{
+// 	background-repeat: repeat-x;
+// }
 
-.water ul.waves li.wave-one{
-	animation: wave 8.7s linear infinite;
-	-webkit-animation-fill-mode: forwards;
-	-o-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
-	bottom: 0px;
-	height: 50px;
-	left: 0;
-	position: absolute;
-	right: 0;
-	z-index: 10;
-}
+// .water ul.waves li.wave-one{
+// 	animation: wave 8.7s linear infinite;
+// 	-webkit-animation-fill-mode: forwards;
+// 	-o-animation-fill-mode: forwards;
+// 	animation-fill-mode: forwards;
+// 	bottom: 0px;
+// 	height: 50px;
+// 	left: 0;
+// 	position: absolute;
+// 	right: 0;
+// 	z-index: 10;
+// }
 
-.water ul.waves li.wave-two{
-	-webkit-animation-fill-mode: forwards;
-	-o-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
-	animation: wave 10s linear infinite;
-	bottom: 0px;
-	height: 84px;
-	left: 0;
-	position: absolute;
-	right: 0;
-	z-index: 9;
-}
+// .water ul.waves li.wave-two{
+// 	-webkit-animation-fill-mode: forwards;
+// 	-o-animation-fill-mode: forwards;
+// 	animation-fill-mode: forwards;
+// 	animation: wave 10s linear infinite;
+// 	bottom: 0px;
+// 	height: 84px;
+// 	left: 0;
+// 	position: absolute;
+// 	right: 0;
+// 	z-index: 9;
+// }
 
-.water ul.waves li.wave-three{
-	-webkit-animation-fill-mode: forwards;
-	-o-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
-	animation: wave 25s linear infinite;
-	bottom: 0;
-	height: 190px;
-	left: 0;
-	position: absolute;
-	right: 0;
-	z-index: 8;
-}
+// .water ul.waves li.wave-three{
+// 	-webkit-animation-fill-mode: forwards;
+// 	-o-animation-fill-mode: forwards;
+// 	animation-fill-mode: forwards;
+// 	animation: wave 25s linear infinite;
+// 	bottom: 0;
+// 	height: 190px;
+// 	left: 0;
+// 	position: absolute;
+// 	right: 0;
+// 	z-index: 8;
+// }
 
-.water ul.waves li.wave-four{
-	-webkit-animation-fill-mode: forwards;
-	-o-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
-	animation: wave 25s linear infinite;
-	bottom: 0;
-	height: 205px;
-	left: 0;
-	position: absolute;
-	right: 0;
-}
+// .water ul.waves li.wave-four{
+// 	-webkit-animation-fill-mode: forwards;
+// 	-o-animation-fill-mode: forwards;
+// 	animation-fill-mode: forwards;
+// 	animation: wave 25s linear infinite;
+// 	bottom: 0;
+// 	height: 205px;
+// 	left: 0;
+// 	position: absolute;
+// 	right: 0;
+// }
 
-.boat{
-	animation: boat 3s linear infinite;
-  background-repeat: no-repeat;
-  bottom: 175px;
-  height: 232px;
-  left: 50%;
-	position: absolute;
-  width: 250px;
-  background-image: url("https://res.cloudinary.com/yuhri/image/upload/v1629986858/boat1_xiat88.png");
-}
+// .boat{
+// 	animation: boat 3s linear infinite;
+//   background-repeat: no-repeat;
+//   bottom: 175px;
+//   height: 232px;
+//   left: 50%;
+// 	position: absolute;
+//   width: 250px;
+//   background-image: url("https://res.cloudinary.com/yuhri/image/upload/v1629986858/boat1_xiat88.png");
+// }
 
-.boat2{
-	animation: boat 3s linear infinite;
-  background-repeat: no-repeat;
-  bottom: 175px;
-  height: 210px;
-  left: 30%;
-	position: absolute;
-  width: 250px;
-  background-image: url("https://res.cloudinary.com/yuhri/image/upload/v1629986866/boat4_dv01lk.png");
-}
+// .boat2{
+// 	animation: boat 3s linear infinite;
+//   background-repeat: no-repeat;
+//   bottom: 175px;
+//   height: 210px;
+//   left: 30%;
+// 	position: absolute;
+//   width: 250px;
+//   background-image: url("https://res.cloudinary.com/yuhri/image/upload/v1629986866/boat4_dv01lk.png");
+// }
 
-@keyframes wave{
-    0% {
-        background-position: 0 0;
-	}
+// @keyframes wave{
+//     0% {
+//         background-position: 0 0;
+// 	}
 
-    100% {
-        background-position: 1920px 0;
-    }
-}
+//     100% {
+//         background-position: 1920px 0;
+//     }
+// }
 
-@keyframes boat{
-	0%{
-		transform: rotate(0);
-	}
+// @keyframes boat{
+// 	0%{
+// 		transform: rotate(0);
+// 	}
 
-	50%{
-		transform: rotate(-3deg);
-	}
+// 	50%{
+// 		transform: rotate(-3deg);
+// 	}
 
-	100%{
-		transform: rotate(0);
-	}
-}
+// 	100%{
+// 		transform: rotate(0);
+// 	}
+// }
