--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,77 +1,146 @@
-*{
-  margin:0;
-  padding:0;
+// *{
+//   margin:0;
+//   padding:0;
+// }
+
+.main-container {
+  display: flex;
 }
 
 .card-container{
-  padding-top: 20px;
-  padding-bottom: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: auto;
-  grid-gap: 10rem;
-  justify-content: center;
+  flex-grow: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  // display: grid;
+  // grid-template-columns: 1fr 1fr;
+  // justify-content: center;
+//   padding-top: 20px;
+//   padding-bottom: 20px;
+//   display: grid;
+//   grid-template-columns: 1fr 1fr;
+//   grid-auto-rows: auto;
+  // grid-gap: 10rem;
+//   justify-content: center;
 }
 
 .background-img{
   background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986874/card1_c6vila.jpg');
-  height: 400px;
-  width: 800px;
-  background-repeat: no-repeat;
-  margin: 5% auto;
-  padding:20px;
+  height: 350px;
+  width: 700px;
+  // background-repeat: no-repeat;
+  // margin: 10% auto;
+  // padding: 20px;
   border-radius: 4px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  position: relative;
-  top: 30px;
   background-size: cover;
   background-position: center;
-  min-height: 30vh;
-  background-position-y: -230px;
+  // background-position-y: -230px;
+  flex: 0 0 30%;
+  margin: 7rem 0;
 }
 
 .background-img2{
   background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986880/card2_rexi3j.jpg');
-  height: 400px;
-  width: 800px;
-  background-repeat: no-repeat;
-  margin: 5% auto;
-  padding:20px;
+  height: 350px;
+  width: 700px;
+  // background-repeat: no-repeat;
+  // margin: 10% auto;
   border-radius: 4px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  position: relative;
-  top: 30px;
   background-size: cover;
-  background-position-y: -280px;
-  min-height: 30vh;
+  // padding: 20px;
+  background-position: center;
+
+  background-position-y: -180px;
+  flex: 0 0 30%;
+  margin: 7rem 0;
 }
 
-.content h4{
-  font-family: "Comfortaa", "cursive";
-  font-size: 30px;
+// .content h4{
+//   font-family: "Comfortaa", "cursive";
+//   font-size: 20px;
+// }
+@media(max-width: 992px) {
+  .background-img {
+      // height: 100px;
+      // width: 200px;
+      flex: 0 0 50%;
+      width: 50%;
+  }
 }
+@media(max-width: 768px) {
+  .background-img {
+    // height: 25px;
+    // width: 50px;
+    flex: 0 0 100%;
+    width: 100%;
+  }
+}
+
+@media(max-width: 480px) {
+  .background-img {
+    // height: 25px;
+    // width: 50px;
+    flex: 0 0 100%;
+    width: 100%;
+  }
+}
+
+@media(max-width: 992px) {
+  .background-img2 {
+      // height: 100px;
+      // width: 200px;
+      flex: 0 0 50%;
+      background-position-y: -180px;
+
+  }
+}
+@media(max-width: 768px) {
+  .background-img2 {
+    // height: 25px;
+    // width: 50px;
+    flex: 0 0 100%;
+    background-position-y: -280px;
+  }
+}  
+
+@media(max-width: 480px) {
+  .background-img2 {
+    // height: 25px;
+    // width: 50px;
+    flex: 0 0 100%;
+    background-position-y: -280px;
+  }
+}
+
 
 .box{
-  position: absolute;
-  top: 5%;
-  left: 50%;
+  // position: absolute;
+  // top: 5%;
+  // left: 50%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
   transform: translate(-50%, -50%);
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   box-sizing: border-box;
   overflow: hidden;
   border: 2px solid #2a3cad;
   color: black;
   padding: 20px;
+
+  h6 {
+    font-family: "Comfortaa", "cursive";
+    font-size: 17px;
+    color: #e97d5f;
+    text-shadow: .5px .5px 1px black;
+    letter-spacing: .1rem;
+    font-weight: bold;
+  }
 }
 
-h6 {
-  font-family: "Comfortaa", "cursive";
-  font-size: 20px;
-  color: #ec9076;
-  text-shadow: 1px 1px 2.5px black;
-  letter-spacing: .2rem;
-}
 
 .box:before{
   content: '';
@@ -92,11 +161,11 @@ h6 {
 
 
 .box .content{
-  position:absolute;
-  top:15px;
-  left:15px;
-  right:15px;
-  bottom:15px;
+  // position:absolute;
+  // top:15px;
+  // left:15px;
+  // right:15px;
+  // bottom:15px;
   border:1px solid #ec9076;
   padding:20px;
   text-align:center;
@@ -135,118 +204,172 @@ h6 {
   transform:rotate(270deg);
 }
 
-.box span:before
-{
-  content: '';
-  position: absolute;
-  width:100%;
-  height: 3px;
-  background: #97cdec;
-  opacity: .5;
-  animation: animate 3s linear infinite;
-}
+// .box span:before
+// {
+//   content: '';
+//   position: absolute;
+//   width:100%;
+//   height: 3px;
+//   background: #97cdec;
+//   opacity: .5;
+//   animation: animate 3s linear infinite;
+// }
 
-@keyframes animate {
-  0% {
-  transform:scaleX(0);
-  transform-origin: left;
-  }
-  50%
-  {
-    transform:scaleX(1);
-  transform-origin: left;
-  }
-  50.1%
-  {
-    transform:scaleX(1);
-  transform-origin: right;
+// @keyframes animate {
+//   0% {
+//   transform:scaleX(0);
+//   transform-origin: left;
+//   }
+//   50%
+//   {
+//     transform:scaleX(1);
+//   transform-origin: left;
+//   }
+//   50.1%
+//   {
+//     transform:scaleX(1);
+//   transform-origin: right;
 
-  }
+//   }
 
-  100%
-  {
-    transform:scaleX(0);
-  transform-origin: right;
+//   100%
+//   {
+//     transform:scaleX(0);
+//   transform-origin: right;
 
-  }
+//   }
 
 
-}
+// }
 
 .service-container{
-  padding-top: 20px;
-  padding-bottom: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: auto;
-  grid-gap: .2rem;
+  flex-grow: 1;
+  display:flex;
+  flex-wrap: wrap;
   justify-content: center;
-  position: relative;
-  bottom: 30px;
+  padding: 2rem;
+  // flex-grow: 1;
+  // display: flex;
+  // flex-wrap: wrap;
+  // padding-top: 20px;
+  // padding-bottom: 20px;
+  // display: grid;
+  // grid-template-columns: 1fr 1fr;
+  // grid-auto-rows: auto;
+  // grid-gap: .2rem;
+  // justify-content: center;
+  // position: relative;
+  // bottom: 30px;
 }
 
 .background-service{
-  background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986887/service4_xos0co.jpg');
+  // background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986887/service4_xos0co.jpg');
+  // height: 350px;
+  // width: 700px;
+  // background-repeat: no-repeat;
+  // // margin: 5% auto;
+  // // padding:20px;
+  // border-radius: 4px;
+  // box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  // // position: relative;
+  // // top: 30px;
+  // // left:105px;
+  // background-size: cover;
+  // background-position: center;
+  // min-height: 30vh;
+  // background-position-y: -70px;
   height: 350px;
   width: 700px;
   background-repeat: no-repeat;
-  margin: 5% auto;
-  padding:20px;
+  // margin: 4% auto;
   border-radius: 4px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  position: relative;
-  top: 30px;
-  left:105px;
+  margin: 2% auto;
+  // position: relative;
+  // top: 30px;
   background-size: cover;
   background-position: center;
-  min-height: 30vh;
-  background-position-y: -70px;
+  // min-height: 30vh;
+  // background-position-y: -230px;
+  flex: 0 0 30%
 }
 
-.background-service2{
-  background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986887/service2_nrxip5.jpg');
-  height: 350px;
-  width: 700px;
-  background-repeat: no-repeat;
-  margin: 5% auto;
-  padding:20px;
-  border-radius: 4px;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  position: relative;
-  top: 30px;
-  right:105px;
-  background-size: cover;
-  background-position-y: -50px;
-  min-height: 30vh;
+@media(max-width: 992px) {
+  .background-service {
+      // height: 100px;
+      // width: 200px;
+      flex: 0 0 50%;
+      
+  }
+}
+@media(max-width: 768px) {
+  .background-service {
+    // height: 25px;
+    // width: 50px;
+    flex: 0 0 100%;
+    
+  }
 }
 
-.extra-container{
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: auto;
-  grid-gap: .2rem;
-  justify-content: center;
-  position: relative;
-  bottom: 130px;
+@media(max-width: 480px) {
+  .background-service {
+    // height: 25px;
+    // width: 50px;
+    flex: 0 0 100%;
+    
+  }
+}
+// .background-service2{
+//   // flex-grow: 0;
+//   // display:flex;
+//   // flex-wrap: wrap;
+//   // background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986887/service2_nrxip5.jpg');
+//   height: 350px;
+//   width: 700px;
+//   background-repeat: no-repeat;
+//   // margin: 5% auto;
+//   // padding:20px;
+//   border-radius: 4px;
+//   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+//   // position: relative;
+//   // top: 30px;
+//   // right:105px;
+//   background-size: cover;
+//   background-position-y: -50px;
+//   min-height: 30vh;
+
+// }
+
+// // .extra-container{
+// //   display: grid;
+// //   grid-template-columns: 1fr;
+// //   grid-auto-rows: auto;
+// //   grid-gap: .2rem;
+// //   justify-content: center;
+// //   position: relative;
+// //   bottom: 130px;
   
-}
+// // }
 
-.background-service3{
-  background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986888/service3_ptjdr5.jpg');
-  height: 350px;
-  width: 700px;
-  background-repeat: no-repeat;
-  margin: 5% auto;
-  padding:20px;
-  border-radius: 4px;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  position: relative;
-  top:5px;
-  background-size: cover;
-  background-position: center;
-  min-height: 30vh;
-  background-position-y: -40px;
-}
+// .background-service3{
+//   // flex-grow: 1;
+//   // display:flex;
+//   // flex-wrap: wrap;
+//   // background-image: url('https://res.cloudinary.com/yuhri/image/upload/v1629986888/service3_ptjdr5.jpg');
+//   height: 350px;
+//   width: 700px;
+//   background-repeat: no-repeat;
+//   // margin: 5% auto;
+//   // padding:20px;
+//   border-radius: 4px;
+//   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+//   // position: relative;
+//   // top:5px;
+//   background-size: cover;
+//   background-position: center;
+//   min-height: 30vh;
+//   background-position-y: -40px;
+// }
 
 .thumbcontent {
   display: flex;
