--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,5 +1,5 @@
   <div class="services-banner" style="background-image: linear-gradient(-225deg, rgba(0,71,198,0.1) 80%, rgba(0,36,61,0.1) 93%), url('https://res.cloudinary.com/yuhri/image/upload/v1630005711/bannerservices_ednxzw.jpg');">
-    <h1> FIND A SERVICE </h1>
+    <h1> SERVICES </h1>
     <%= simple_form_for :search, url: root_path, method: :get do |f| %>
       <div class="search-form-control form-group">
         <input class="form-control string required" type="text" name="search[query]" id="search_query"  />
@@ -9,7 +9,6 @@
       </div>
     <% end %>
   </div>  
-  </div>
 
   <div class="centered">
     <section class="thumbs">
